remove data in index.html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>This is git doc</h1>
     <p>
-        Create my geshtop... 
+        Create my geshtop.
     </p>
 </body>
 </html>
